# IntegradorIstic

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json
src/Logica/: ingreso.py  menu.py  opciones.py  opcionesMenu.py  opcionesUsuarios.py  submenu.py
src/Logica/helpers/: helpers.py
src/Persistencia/: Pedidos.py  Usuarios.py
src/Persistencia/clases/: Pedidos.py  Usuarios.py
src/Persistencia/datos/: estructuras.py
