[project]
name = "integradoristic"
version = "0.1.0"
description = "Programa integrador de la materia Fundamentos de programación inpartida por el profesor Gandhi Hernandez en el Istic"
authors = [
    {name = "Gregory Rodriguez"}
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pysqlite3-binary (>=0.5.4.post2,<0.6.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
