[project]
name = "integradoristic"
version = "0.1.0"
description = "Programa integrador de la materia Fundamentos de programación inpartida por el profesor Gandhi Hernandez en el Istic"
authors = [
    {name = "Gregory Rodriguez"}
]
license = "MIT"
requires-python = ">=3.13,<3.16"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]


[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.21.0,<7.0.0)"
]
